fix: fix request data mapping
